# fynd

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  blacklist.toml  blocklist.toml  build_and_push.sh  check.sh  comparison_results.json  deploy.sh  docker-compose.frontend.yml  docker-compose.swap.yml  docker-compose.yml  release.config.js  single_pool.toml  worker_pools.toml  worker_pools_bf2_vs_ml2.toml
.claude/: CODEBASE.md
.claude/knowledge/: rust.md  typescript.md
.claude/plans/: investigation-ml-fluid-v1.md
.github/workflows/: ci.yaml  docker.yaml  docs.yaml  examples.yaml  nightly-canary.yaml  release.yaml  semver-check.yaml  v2-main-workflow.yaml
clients/: CLAUDE.md  README.md  openapi.json
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: quote.rs  swap_client_fee.rs  swap_erc20.rs  swap_permit2.rs
clients/rust/src/: client.rs  error.rs  execution.rs  lib.rs  local.rs  mapping.rs  signing.rs  types.rs  wire.rs
clients/rust/tests/: integration.rs  local_fynd.rs
clients/typescript/: pnpm-lock.yaml  pnpm-workspace.yaml
deployment/: Chart.yaml  values.yaml
deployment/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  external-secret.yaml  ingress.yaml  podscrape.yaml  service.yaml
docs/: ALGORITHMS.md  ARCHITECTURE.md  README.md  SUMMARY.md  bellman-ford-explainer.md  bellman-ford-handover.md  benchmark-results.md  turbine-deployment-runbook.md
docs/algorithms/: README.md  bellman-ford.md  most-liquid.md
docs/get-started/: benchmark-results.md  benchmarking.md  quickstart.md
docs/guides/: benchmarking.md  client-fees.md  custom-algorithm.md  encoding-options.md  executing-the-solutions.md  server-configuration.md  swap-cli.md
docs/reference/: api.md
examples/: README.md  solver.rs
examples/atomic_searcher/: GUIDE.md  PROJECTPLAN.md  README.md  amount_optimizer.rs  cycle_detector.rs  executor.rs  flash_loan.rs  main.rs  types.rs
examples/benchmark/: README.md  bf_comparison.py  compare_runs.py  config.rs  csv_to_requests.py  exporter.rs  main.rs  parse_comparison_logs.py  parse_pool_comparison.py  run_comparison.sh  runner.rs  trades_10k_dune_eth_feb2026.csv
examples/calldata/: main.rs
examples/compare/: README.md  main.rs  requests.rs
examples/permit2/: erc20.rs  main.rs
examples/quickstart/: README.md  Readme.md  main.rs  types.rs
examples/tutorial/: README.md  erc20.rs  main.rs  types.rs
examples/tutorial_with_permit2/: erc20.rs  main.rs  permit2.rs
fixtures/integration/: README.md  golden_outputs.json  market_recording.json.zst
fynd-algo-sdk/: Cargo.toml
fynd-algo-sdk/src/: lib.rs
fynd-core/: CLAUDE.md  Cargo.toml  README.md
fynd-core/examples/: curve_tricrypto_repro.rs  custom_algorithm.rs  solve_order.rs
fynd-core/src/: encoding.rs  lib.rs  solver.rs
fynd-core/src/algorithm/: bellman_ford.rs  bellman_ford_pricing.rs  bf_helpers.rs  mod.rs  most_liquid.rs  test_utils.rs
fynd-core/src/derived/: computation.rs  error.rs  events.rs  manager.rs  mod.rs  store.rs  tracker.rs  types.rs
fynd-core/src/derived/computations/: pool_depth.rs  spot_price.rs  token_gas_price.rs
fynd-core/src/encoding/: encoder.rs  mod.rs
fynd-core/src/feed/: events.rs  gas.rs  market_data.rs  mod.rs  protocol_registry.rs  tycho_feed.rs  write_lock_contention_test.rs
fynd-core/src/graph/: mod.rs  petgraph.rs
fynd-core/src/order_manager/: config.rs  mod.rs
fynd-core/src/price_guard/: binance_ws.rs  chainlink.rs  common.rs  config.rs  guard.rs  hyperliquid.rs  mod.rs  provider.rs  provider_registry.rs  stable_usd.json  utils.rs
fynd-core/src/recording/: golden.rs  io.rs  mod.rs  types.rs
fynd-core/src/types/: constants.rs  encoding.rs  internal.rs  mod.rs  primitives.rs  quote.rs  solution.rs
fynd-core/src/worker_pool/: mod.rs  pool.rs  registry.rs  task_queue.rs  worker.rs
fynd-core/src/worker_pool_router/: config.rs  mod.rs
fynd-core/tests/: integration.rs
fynd-core/tests/integration/: derived_data_tests.rs  harness.rs  scenarios.rs  solution_tests.rs  timing_tests.rs
fynd-rpc/: CLAUDE.md  Cargo.toml  README.md
fynd-rpc-types/: CLAUDE.md  Cargo.toml  README.md
fynd-rpc-types/src/: lib.rs
fynd-rpc/src/: builder.rs  config.rs  lib.rs  middleware.rs  protocols.rs
fynd-rpc/src/api/: dto.rs  error.rs  handlers.rs  mod.rs  prices.rs  types.rs
fynd-rpc/src/order_manager/: mod.rs
monitoring/: prometheus.yml  tempo.yml
notes/: team-review-ms-atomic-searcher-showcase-20260309-2121.md
notes/.tmp/: team-review-context.md
scripts/: _env-setup.sh  bench-remote.sh  check-doc-snippets.sh  dev-env.sh  docker-build.sh  run-all-examples.sh  run-example.sh  update-openapi.sh
src/: api.rs  builder.rs  cli.rs  config.rs  encoding.rs  events.rs  guides.rs  lib.rs  main.rs  market_data.rs  market_graph.rs  models.rs  route_graph.rs  server.rs  solver.rs  task_queue.rs  tycho_feed.rs  worker.rs  worker_pool.rs
src/algorithm/: bellman_ford.rs  mod.rs  most_liquid.rs  stats.rs  test_utils.rs
src/api/: error.rs  handlers.rs  mod.rs
src/derived/: computation.rs  (+7 more)
tools/: CLAUDE.md
tools/benchmark/: CLAUDE.md  Cargo.toml  README.md  bellman_ford_2hop.toml  bellman_ford_3hop.toml  benchmark.rs  compare.rs  config.rs  exporter.rs  most_liquid_2hop.toml  most_liquid_3hop.toml  pairs.json  requests.rs  requests_set.json  runner.rs  trades_1k_requests.json
tools/benchmark/src/: benchmark.rs  compare.rs  config.rs  download.rs  exporter.rs  main.rs  requests.rs  runner.rs  scale.rs  trades_sample.json
tools/competition/: Cargo.toml
tools/competition/examples/naive/: Cargo.toml
tools/competition/examples/naive/src/: lib.rs
tools/competition/src/: leaderboard.rs  loader.rs  main.rs  runner.rs  scorer.rs
tools/fynd-swap-cli/: Cargo.toml  README.md
tools/fynd-swap-cli/src/: erc20.rs  main.rs  permit2.rs
tools/record-market/: Cargo.toml
tools/record-market/src/: golden.rs  main.rs  recorder.rs
uniswap-x/: Cargo.toml
uniswap-x/src/: gateway.rs  main.rs  models.rs  order.rs  orderbook.rs  solver.rs
(+105 files in other folders)
