[package]
name = "fynd"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"

[dependencies]
fynd-rpc = { workspace = true }
fynd-core = { workspace = true }

# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP (for metrics server)
actix-web = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Tycho (for Chain type in CLI)
tycho-simulation = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tycho-execution = { version = ">=0.155.0", features = ["evm"] }
alloy = { version = "1.0", features = ["providers", "signer-local", "rpc-types-eth", "eip712", "node-bindings"] }
alloy-chains = "0.2"
dialoguer = "0.11"
dotenv = "0.15"
hex = "0.4"
fastrand = "2.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }

[workspace]
members = ["fynd-core", "fynd-rpc"]
resolver = "2"

[workspace.dependencies]
# HTTP
actix-web = "4"

# Async
tokio = { version = "1", features = ["full", "sync"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["std"] }
toml = "0.8"

# OpenAPI / Swagger UI
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"
tracing-actix-web = "0.7"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Tycho
tycho-simulation = ">=0.234.0"
typetag = "0.2"

# Graph algorithms
petgraph = "0.6"

# Utilities
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num_cpus = "1.16"
lazy_static = { version = "1.5.0", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-stream = "0.1.18"
async-channel = "2.5.0"
async-trait = "0.1"
chrono = "0.4"
itertools = "0.14.0"
rayon = { version = "1.10", default-features = false }

# Internal crates
fynd-core = { path = "fynd-core" }
fynd-rpc = { path = "fynd-rpc" }

# Dev dependencies
rstest = "0.18"

[[example]]
name = "tutorial"
path = "examples/tutorial/main.rs"