[package]
name = "fynd-rpc-types"
version = "0.1.0"
edition = "2021"
description = "Shared DTO types for the Fynd RPC API (request/response wire format)"
license = "MIT"

[features]
openapi = ["dep:utoipa"]
core = ["dep:fynd-core"]

[lints.clippy]
# `Into` is implemented directly (rather than `From`) for the DTO→Core direction because
# the orphan rule prevents implementing `From<DTO>` on external fynd_core types.
from_over_into = "allow"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
num-bigint.workspace = true
uuid.workspace = true
tycho-simulation.workspace = true

# Optional: OpenAPI schema generation (used by fynd-rpc server)
utoipa = { version = "5", optional = true }
# Optional: conversions to/from fynd-core domain types
fynd-core = { workspace = true, optional = true }
