[package]
name = "fynd-rpc"
version.workspace = true
edition = "2021"
description = "HTTP RPC server for Fynd DEX router"
license = "MIT"

[dependencies]
fynd-core.workspace = true
fynd-rpc-types = { workspace = true, features = ["openapi", "core"] }
actix-web.workspace = true
actix-cors.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tycho-simulation.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
toml.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
num_cpus.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
metrics.workspace = true
hex = "0.4"
tycho-execution.workspace = true

[features]
experimental = []

[dev-dependencies]
rstest.workspace = true
