[package]
name = "uniswap-x"
version.workspace = true
edition = "2021"

[dependencies]
tycho-router = { path = ".." }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tycho-simulation = { workspace = true }
tycho-execution = { workspace = true }
alloy = { workspace = true }
num-bigint = { workspace = true }
hex = "0.4.3"
bytes = "1.11.0"
