[package]
name = "fynd-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the fynd DEX solver"

[features]
local-testing = ["dep:bollard", "dep:fastrand"]

[dependencies]
# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Optional: Docker management for LocalFyndInstance (feature-gated)
bollard = { version = "0.20.1", optional = true }
fastrand = { version = "2.3.0", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["std"] }

# Ethereum types and signing
alloy = { version = "1.0", features = ["providers", "rpc-types-eth", "network", "transport-http", "rpc-client", "consensus", "eips"] }
alloy-chains = "0.2"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Big integers
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
