[package]
name = "fynd-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the fynd DEX solver"

[dependencies]
# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["std"] }

# Ethereum types and signing
alloy = { version = "1.0", features = ["providers", "rpc-types-eth", "network", "transport-http", "rpc-client", "consensus", "eips"] }

# Async
tokio = { version = "1", features = ["full"] }

# Big integers
num-bigint = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
