[package]
name = "fynd-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Fynd DEX router"
license = "MIT"

[dependencies]
# Alloy (Ethereum primitives, providers, consensus)
alloy = { workspace = true }

# Amounts
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Raw bytes for addresses
bytes = { workspace = true }

# Async
tokio = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true }
