[package]
name = "fynd-benchmark"
version.workspace = true
edition = "2021"
description = "Benchmark and comparison tooling for Fynd solvers"

[dependencies]
fynd-client       = { workspace = true }
tokio             = { workspace = true }
clap              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
alloy             = { workspace = true }
bytes             = { workspace = true }
num-bigint        = { workspace = true }
fastrand          = "2.3"
reqwest           = { version = "0.12", features = ["json"] }

[[bin]]
name = "fynd-benchmark"
path = "src/main.rs"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
