[package]
name = "fynd-swap-cli"
version.workspace = true
edition = "2021"
description = "CLI for quoting and executing token swaps via the Fynd solver"

[dependencies]
fynd-client        = { workspace = true }
fynd-rpc           = { workspace = true }
tokio              = { workspace = true }
clap               = { workspace = true }
alloy              = { workspace = true, features = ["signer-local"] }
actix-web          = { workspace = true }
bytes              = { workspace = true }
num-bigint         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tycho-simulation   = { workspace = true }
reqwest            = { version = "0.12" }

[[bin]]
name = "fynd-swap-cli"
path = "src/main.rs"
