[package]
name = "record-market"
version.workspace = true
edition = "2021"
description = "Capture Tycho market state for integration testing"

[dependencies]
fynd-core.workspace = true
tycho-simulation.workspace = true
tycho-execution.workspace = true
tokio = { workspace = true, features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow.workspace = true
tokio-stream.workspace = true
num-bigint.workspace = true
num_cpus.workspace = true
toml.workspace = true
